# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.97 - XXX

  From Anonymous:

  - Fix looking for default paths in Visual Studio 8.0 (and later).

  From Matt Doar:

  - Provide a more complete write-your-own-Scanner example in the man page.

  From Ralf W. Grosse-Kunstleve:

  - Contributed upstream Python change to our copied subprocess.py module
    for more efficient standard input processing.

  From Steven Knight:

  - Fix the Node.FS.Base.rel_path() method when the two nodes are on
    different drive letters.  (This caused an infinite loop when
    trying to write .sconsign files.)

  - Fully support Scanners that use a dictionary to map file suffixes
    to other scanners.

  From Leanid Nazdrynau:

  - Fix detection of Java anonymous classes if a newline precedes the
    opening brace.

  From Gary Oberbrunner:

  - Document use of ${} to execute arbitrary Python code.

  - Add support for:
    1) automatically adding a site_scons subdirectory (in the top-level
       SConstruct directory) to sys.path (PYTHONPATH);
    2) automatically importing site_scons/site_init.py;
    3) automatically adding site_scons/site_tools to the toolpath.

  From John Pye:

  - Change ParseConfig() to preserve white space in arguments passed in
    as a list.

  From David Vitek:

  - Add a NoCache() function to mark targets as unsuitable for propagating
    to (or retrieving from) a CacheDir().



RELEASE 0.96.94 - Sun, 07 Jan 2007 18:36:20 -0600

  NOTE:  This is a pre-release of 0.97 for testing purposes.

  From Anonymous:

  - Allow arbitrary white space after a SWIG %module declaration.

  From Paul:

  - When compiling resources under MinGW, make sure there's a space 
    between the --include-dir option and its argument.

  From Jay Kint:

  - Alleviate long command line issues on Windows by executing command