@@ -7,6 +7,7 @@ python -c "from os.path import join; import sys; sys.path = [ join(sys.prefix, '
 @REM no way to set exit status of this script for 9x/Me
 goto endscons
 :WinNT
+set path=%path%;%~dp0
 python -c "from os.path import join; import sys; sys.path = [ join(sys.prefix, 'Lib', 'site-packages', 'scons-__VERSION__'), join(sys.prefix, 'Lib', 'site-packages', 'scons'), join(sys.prefix, 'scons-__VERSION__'), join(sys.prefix, 'scons')] + sys.path; import SCons.Script; SCons.Script.main()" %*
 if NOT "%COMSPEC%" == "%SystemRoot%\system32\cmd.exe" goto endscons
 if errorlevel 9009 echo you do not have python in your PATH
