@@ -3,3 +3,4 @@ group = Development/Tools
 
 [bdist_wininst]
 title = SCons - a software construction tool
+install-script = scons-post-install.py
