@@ -350,9 +350,35 @@ class install_data(_install_data):
         else:
             self.data_files = []
 
+description = """Open Source next-generation build tool.
+Improved, cross-platform substitute for the classic Make
+utility.  In short, SCons is an easier, more reliable
+and faster way to build software."""
+
+scripts = [
+    'script/scons',
+    'script/sconsign',
+    'script/scons-time',
+
+    # We include scons.bat in the list of scripts, even on UNIX systems,
+    # because we provide an option to allow it be installed explicitly,
+    # for example if you're installing from UNIX on a share that's
+    # accessible to Windows and you want the scons.bat.
+    'script/scons.bat',
+]
+
+if is_win32:
+    scripts = scripts + [
+        'script/scons-post-install.py'
+    ]
+
 arguments = {
     'name'             : "scons",
     'version'          : Version,
+    'description'      : description,
+    'author'           : 'Steven Knight',
+    'author_email'     : 'knight@baldmt.com',
+    'url'              : "http://www.scons.org/",
     'packages'         : ["SCons",
                           "SCons.compat",
                           "SCons.Node",
@@ -365,10 +391,7 @@ arguments = {
                           "SCons.Tool"],
     'package_dir'      : {'' : 'engine'},
     'data_files'       : [('man/man1', man_pages)],
-    'scripts'          : ['script/scons',
-                          'script/sconsign',
-                          'script/scons-time',
-                          'script/scons.bat'],
+    'scripts'          : scripts,
     'cmdclass'         : {'install'         : install,
                           'install_lib'     : install_lib,
                           'install_data'    : install_data,
